--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no, minimal-ui, maximum-scale=0.5, minimum-scale=0.5">
+  <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no, maximum-scale=0.5, minimum-scale=0.5">
   <title>Vue Rate example</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
     <vue-rating :rate-value="4.5"></vue-rating>
   </div>
 
-  <script src="./dist/build.js"></script>
+  <script src="/build.js"></script>
 </body>
 </html>
