--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no, maximum-scale=0.5, minimum-scale=0.5">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no, maximum-scale=0.5, minimum-scale=0.5"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
   <title>Vue Rate example</title>
 </head>
 <body>
